2012-02-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-column-specs): Protect against TDs with "width: 0%".

2012-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-send-authinfo): Work for secure nntp entry in authinfo.

2012-02-20  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-clean-old-newsrc): Allow a FORCE parameter.

2012-02-20  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-shr): Remove "soft hyphens".

	* nnimap.el (nnimap-request-list): Return the group names encoded as
	utf8.  Otherwise non-European group names don't work.
	(nnimap-request-newgroups): Ditto.

	* gnus-sum.el (gnus-summary-insert-old-articles): Fix the syntax for
	the default in `read-string' (bug#10757).

	* gnus-msg.el (gnus-group-post-news): Don't bug out on `C-u a' on
	topics (bug#10843).

	* nnimap.el (nnimap-log-command): Add the IMAP address to the log
	buffer.  Suggested by Herbert Valerio Riedel.
	(nnimap-request-move-article): Delete the message from the correct IMAP
	server.

2012-02-19  Vida Gábor  <vidagabor@gmail.com>  (tiny change)

	* gnus-demon.el (gnus-demon-init): Don't multiply time twice.
	Reported by Peter Münster.

2012-02-18  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-image-fetched): Make sure we really kill the right
	buffer.

2012-02-16  Leo Liu  <sdl.web@gmail.com>

	* gnus-start.el (gnus-1): Avoid duplicate entries.

2012-02-16  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-dissect-singlepart): Guess what the type of
	application/octet-stream parts really is.

	* gnus-sum.el (gnus-propagate-marks): Remove.

2012-02-15  Lars Ingebrigtsen  <larsi@gnus.org>

	* imap.el: Remove.

	* nntp.el (nntp-coding-system-for-read): Remove.
	(nntp-coding-system-for-write): Ditto.
	(nntp-open-connection): Just use `binary' directly.

	* gnus-start.el (gnus-clean-old-newsrc): Delete `unexist' from pre-Ma
	Gnus 0.3.

2012-02-15  Paul Eggert  <eggert@cs.ucla.edu>
